@@ -1,6 +1,7 @@
 ver 0.19.20 (not yet released)
 * decoder
   - ffmpeg: ignore empty packets
+  - sidplay: fix playback speed with libsidplayfp
 
 ver 0.19.19 (2016/08/23)
 * decoder
